mailman (1:2.1.20-1) UNRELEASED; urgency=medium

  * New upstream release.
    - Drop obsolete patches:
      92_CVE-2015-2775.patch
  * Checked for policy 3.9.6, no changes.
  * Make postfix-to-mailman.py work with the full recipient email
    address, solving an issue when recipient_delimiter = "-".
    To take advantage of this, change "${user}" to "${recipient}"
    in Postfix' master.cf. Patch by Brian O'Connor (Closes: #578986)

 -- Thijs Kinkhorst <thijs@debian.org>  Thu, 14 May 2015 14:09:42 +0000

mailman (1:2.1.18-2) unstable; urgency=high

  * Fix security issue: path traversal through local_part.
    Affects installations which use an Exim or Postfix transport
    instead of fixed aliases; attacker needs to be able to place
    files on the local filesystem.
    (CVE-2015-2775, Closes: 781626)

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 06 Apr 2015 15:36:15 +0000

mailman (1:2.1.18-1) unstable; urgency=medium

  * New upstream release.
    - Adds DMARC support. (Closes: #746592)
    - Drop obsolete patches:
      20_qmail_to_mailman.debian.patch
      80_sync_members_unicode.patch
  * Add lsb-release to debian/tests/control. (Closes: #734180)
  * Fix ownership on /var/lib/mailman/archives/private as upstream
    suggests, also reflecting group ownership for public archives.
    Thanks Luca Capello! (closes: #603904)
  * Checked for policy 3.6.5, no changes.

 -- Thijs Kinkhorst <thijs@debian.org>  Thu, 10 Jul 2014 19:27:46 +0200

mailman (1:2.1.16-2) unstable; urgency=medium

  * Upload to unstable, as requested by Thijs; we did not encounter
    any unexpected trouble with the version in experimental, and it
    does fix an RC bug as well as a release goal.

 -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Feb 2014 14:00:37 +0100

mailman (1:2.1.16-1exp2) experimental; urgency=low

  * Try harder to use UTF-8

 -- Thorsten Glaser <tg@mirbsd.de>  Sun, 29 Dec 2013 14:40:17 +0000

mailman (1:2.1.16-1exp1) experimental; urgency=low
