@@ -7,7 +7,10 @@ mailman (1:2.1.20-1) UNRELEASED; urgency=medium
   * Make postfix-to-mailman.py work with the full recipient email
     address, solving an issue when recipient_delimiter = "-".
     To take advantage of this, change "${user}" to "${recipient}"
-    in Postfix' master.cf. Patch by Brian O'Connor (Closes: #578986)
+    in Postfix' master.cf. Patch by Brian O'Connor. (Closes: #578986)
+  * Make package build reproducibly by using install instead of cp
+    for installing qmail-to-mailman.py. Patch by Jérémy Bobbio.
+    (Closes: #783151)
 
  -- Thijs Kinkhorst <thijs@debian.org>  Thu, 14 May 2015 14:09:42 +0000
 
